--- a/main/package.json
+++ b/main/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-typed": "^2.0.12",
     "socket.io-client": "^4.7.4",
     "tailwindcss": "^3.4.1",
     "typeface-barlow": "^1.1.13",
