--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ PORT = 5000
 API_SECRET = "-lJxcihY9bngmEki1BV3-5ROpic"
 CLOUD_NAME =  "dd6sontgf"
 API_KEY = "417834435751149"
+API_KEY_GEN_AI = "AIzaSyDqlHWwCII7vLdhdLQ9h9w8y5kW_INHiM0"
