--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": { 
+  "dependencies": {
+    "@google/generative-ai": "^0.5.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.1.0",
     "cors": "^2.8.5",
