--- a/main/package.json
+++ b/main/package.json
@@ -13,12 +13,14 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
-    "framer-motion": "^11.0.25",
+    "framer-motion": "^11.0.28",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.2",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-typed": "^2.0.12",
