--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-URL = "mongodb+srv://shubhamshinde6762:rOChx6sxOoThQXZn@cluster0.ockwmf9.mongodb.net/?retryWrites=true&w=majority"
+URL = " 
 PORT = 5000
 API_SECRET = "-lJxcihY9bngmEki1BV3-5ROpic"
 CLOUD_NAME =  "dd6sontgf"
